# MCP-assistant

./: .gitignore  GMAIL_30_TEST_QUESTIONS.md  PROJECT_DOCUMENTATION.md  auth.py  gmail_test_questions.md  main.py  pyproject.toml  test_docs_tools_real_data.py  test_drive_tools_real_data.py  test_gmail_tools.py  test_gmail_tools_real_data.py  test_sheets_tools_real_data.py
app/: main.py
app/core/: config.py  llm_client.py  mcp.py  orchestrator.py
app/integrations/docs/: core.py  core_v2.py  registry.py  utils.py
app/integrations/drive/: README.md  core.py  core_v2.py  registry.py  utils.py
app/integrations/gmail/: __init__.py  ai.py  core.py  core_v2.py  registry.py  utils.py
app/integrations/sheets/: core.py  core_v2.py  registry.py  utils.py
app/tools/: calculator.py  filesystem.py
app/ui/: desktop.py  web.py
app/ui/static/: index.html
app/ui/static/assets/: app.css  app.js
